Creating app test structure

--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
     "test:e2e:build": "detox build ios.sim.debug",
     "e2e:ios:7": "detox test -c ios.sim.debug -n 'iPhone 7'",
     "e2e:ios:X": "detox test -c ios.sim.debug -n 'iPhone X'",
-    "e2e": "yarn e2e:ios:7 & yarn e2e:ios:X"
+    "e2e": "yarn e2e:ios:7 & yarn e2e:ios:X",
+    "prettier": "prettier --write"
   },
   "dependencies": {
     "@babel/runtime": "^7.3.1",
     "react": "16.5.0",
+    "react-jsx-parser": "^1.13.0",
     "react-native": "0.57.0"
   },
   "devDependencies": {
     "babel-jest": "24.0.0",
     "detox": "^10.0.5",
+    "eslint": "^5.12.1",
     "jest": "24.0.0",
     "metro-react-native-babel-preset": "0.51.1",
+    "prettier": "^1.16.3",
+    "pretty-quick": "^1.10.0",
     "react-test-renderer": "16.5.0"
   },
   "jest": {
