--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ install:
 - npm install detox-cli
 
 script:
-- detox build --configuration ios.sim.release
-- detox test --configuration ios.sim.release --cleanup
+- npx detox build --configuration ios.sim.release
+- npx detox test --configuration ios.sim.release --cleanup
