--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ cache:
   directories:
     - $(npm config get prefix)/bin/detox-cli
 script:
-- detox build --configuration ios.sim.release
-- detox test --configuration ios.sim.release --cleanup
+- npx detox-cli build -c ios.sim.release
+- npx detox-cli test -c ios.sim.release
